changed default FILTERS_ADDRESS value in config.ini (located in the  MatecatApache folder)

--- a/MateCat-Trusty/MateCatApache/app_configs/config.ini
+++ b/MateCat-Trusty/MateCatApache/app_configs/config.ini
@@ -20,7 +20,7 @@ MAX_UPLOAD_FILE_SIZE = 104857600
 MAX_UPLOAD_TMX_FILE_SIZE = 104857600
 
 ENABLE_OMEGAT_DOWNLOAD = true
-FILTERS_ADDRESS = "https://translated-matecat-filters-v1.p.mashape.com"
+FILTERS_ADDRESS = "filters:8732"
 
 SSE_BASE_URL = "http://matecat/sse"
 SMTP_HOST = "10.30.1.225"
@@ -49,7 +49,7 @@ MAX_UPLOAD_TMX_FILE_SIZE = 104857600;
 MYMEMORY_API_KEY = "pro@matecat.com"
 MYMEMORY_TM_API_KEY = "tmanalysis@matecat.com"
 
-FILTERS_ADDRESS = "https://translated-matecat-filters-v1.p.mashape.com"
+FILTERS_ADDRESS = "filters:8732"
 
 SSE_BASE_URL = "http://localhost/sse"
 SMTP_HOST = "10.30.1.225"
